Initial fork from gertty -> boardtty
Change-Id: I8c0ce5550f2287f77fb31c790c3923d3d1b80481

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = gertty
-summary = Gertty is a console-based interface to the Gerrit Code Review system.
+name = boartty
+summary = Boardtty is a console-based interface to Storyboard.
 description-file =
     README.rst
 author = OpenStack
@@ -16,14 +16,14 @@ classifier =
     Programming Language :: Python
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
-keywords = gerrit console urwid review
+keywords = storyboard console urwid
 
 [files]
 packages =
-    gertty
+    boartty
 data_files =
-    share/gertty/examples = examples/*
+    share/boartty/examples = examples/*
 
 [entry_points]
 console_scripts =
-    gertty = gertty.app:main
+    boartty = boartty.app:main
