Fix examples/openstack-boartty.yaml servers url
This commit fixes the examples/openstack-boartty.yaml servers url to
avoid confusing of users.

Change-Id: I16a2cbda88c76154515be88fd5678047110a9669

--- a/examples/openstack-boartty.yaml
+++ b/examples/openstack-boartty.yaml
@@ -8,7 +8,7 @@
 
 servers:
   - name: openstack
-    url: https://review.openstack.org/
+    url: https://storyboard.openstack.org/
     # Your authentication token for Storyboard. Go to the "Profile"
     # and then "Tokens" (the "key" icon) page in the Storyboard web
     # interface and create a token.  Give it a sufficiently long
