Fix inconsistency name
This commit fixes inconsistency name from Boardtty to Boartty.

Change-Id: I2a8509dcbab0e7c138f492c8d285af52b363b0e8

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = boartty
-summary = Boardtty is a console-based interface to Storyboard.
+summary = Boartty is a console-based interface to Storyboard.
 description-file =
     README.rst
 author = OpenStack
