--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ summary = Boartty is a console-based interface to Storyboard.
 description-file =
     README.rst
 author = OpenStack
-author-email = openstack-dev@lists.openstack.org
+author-email = openstack-discuss@lists.openstack.org
 home-page = http://www.openstack.org/
 classifier =
     Topic :: Utilities
